--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
       <!-- [INICIO] Content -->
       <div id="content">
         <div class="conteudo1">
-          <h1>SOLUÇÕES DE ENGENHARIA PARA SUPERAR NOVOS DESAFIOS</h1>
-          <p>
-            Uma empresa júnior é uma organização sem fins lucrativos composta
-            por estudantes universitários que se dedicam a oferecer serviços de
-            consultoria e desenvolvimento para empresas.
-          </p>
+          <div><h1>SOLUÇÕES DE ENGENHARIA PARA SUPERAR NOVOS DESAFIOS</h1></div>
+          <div>
+            <p>
+              Uma empresa júnior é uma organização sem fins lucrativos composta
+              por estudantes universitários que se dedicam a oferecer serviços
+              de consultoria e desenvolvimento para empresas.
+            </p>
+          </div>
         </div>
 
         <div>
